Refatoração e comentário de cada função

--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -32,6 +32,7 @@
 						<ul class="navbar-nav me-auto">
 							<li id='search-By-Name-selected'>
 								<select class="form-select" aria-label="Default select example" id = 'name-selected'>
+									<option value = '0'selected>Escolha um Pokémon</option>
 								</select>
 								<button class="btn" id='btn-search-by-name'>Buscar</button>
 							</li>
@@ -130,7 +131,7 @@
 			</div>
 		</footer>
 	</footer>
-	<script src='pokedex.js'></script>
+	<script type= 'module' src='pokedex.js'></script>
 </body>
 
 </html>
