--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -31,8 +31,8 @@
 					<div id="By-Name-selected">
 						<ul class="navbar-nav me-auto">
 							<li id='search-By-Name-selected'>
-								<select class="form-select" aria-label="Default select example" id = 'name-selected'>
-									<option value = '0'selected>Escolha um Pokémon</option>
+								<select class="form-select" aria-label="Default select example" id='name-selected'>
+									<option value='0' selected>Escolha um Pokémon</option>
 								</select>
 								<button class="btn" id='btn-search-by-name'>Buscar</button>
 							</li>
@@ -40,11 +40,11 @@
 					</div>
 				</div>
 				<div class="navbar navbar-expand-lg navbar-light">
-					<div class='m-3'>
+					<div>
 						<ul class="navbar-nav me-auto">
 							<li id="search-By-Generation">
-								<select class="form-select" id = 'generation-selected'>
-									<option value = '0'selected>Região</option>
+								<select class="form-select" id='generation-selected'>
+									<option value='0' selected>Região</option>
 									<option value="1">Kanto (1ª Geração)</option>
 									<option value="2">Johto (2ª Geração)</option>
 									<option value="3">Hoenn (3ª Geração)</option>
@@ -63,14 +63,16 @@
 			<section>
 				<article id='info'>
 					<ul id='info-Pokemon'>
-
 					</ul>
 				</article>
 			</section>
 		</section>
 		<aside id='search-By-Type'>
-			<div>
-				<p id='legend-p'>Pesquise por tipo de Pokémon:</p>
+			<div id = 'div-lateral'>
+				<p id = 'titulo-rolagem'>Pesquise por tipo de Pokémon</p>	
+				<scroll-container id = 'barra-de-rolagem'>
+				  </scroll-container>
+				  <button class="btn" id='btn-search-by-Type'>Buscar</button>
 			</div>
 		</aside>
 	</main>
@@ -131,7 +133,7 @@
 			</div>
 		</footer>
 	</footer>
-	<script type= 'module' src='pokedex.js'></script>
+	<script type='module' src='pokedex.js'></script>
 </body>
 
 </html>
