--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -57,6 +57,10 @@
 						</ul>
 					</div>
 				</div>
+				<article id='info-smart'>
+					<ul id='info-Pokemon-smart'>
+					</ul>
+				</article>
 			</nav>
 			<h2 id='title-section' > Todos os Pokémon</h2>
 			<section>
