--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -90,24 +90,24 @@
 							</a></h2>
 					</div>
 					<div class="col-sm-2">
-						<h5>Inicio</h5>
-						<ul>
+						<h5 class = 'h5-footer'>Inicio</h5>
+						<ul class = 'ul-footer'>
 							<li><a href=''>Home</a></li>
 							<li><a href=''>Cursos</a></li>
 							<li><a href=''>Downloads</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-2">
-						<h5>Sobre-nós</h5>
-						<ul>
+						<h5 class = 'h5-footer'>Sobre nós</h5>
+						<ul class = 'ul-footer'>
 							<li><a href=''>Informações da Empresa</a></li>
 							<li><a href=''>Contato</a></li>
 							<li><a href=''>Blog</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-2">
-						<h5>Suporte</h5>
-						<ul>
+						<h5 class = 'h5-footer'>Suporte</h5>
+						<ul class = 'ul-footer'>
 							<li><a href=''>FAQ</a></li>
 							<li><a href=''>Telefones</a></li>
 							<li><a href=''>Chat</a></li>
@@ -120,8 +120,8 @@
 							<a href='' class="instagram"><i class="fa fa-instagram"></i></a>
 						</div>
 						<div class="col-sm-2">
-							<h5>Contato</h5>
-							<ul>
+							<h5 class = 'h5-footer'>Contato</h5>
+							<ul class = 'ul-footer'>
 								<li>(83)998364408</li>
 								<li>bruno.cabral.silva2018@gmail.com</a></li>
 							</ul>
@@ -132,7 +132,7 @@
 			</div>
 			<hr>
 			<div class="footer-copyright">
-				<p>© 2022 Copyright - Bruno Gabryell Cabral da Silva</p>
+				<p id = 'copyright'>© 2022 Copyright - Bruno Gabryell Cabral da Silva</p>
 			</div>
 		</footer>
 	</footer>
