--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -20,8 +20,8 @@
 			<nav id='principal'>
 				<div>
 					<div id='search-By-Name'>
-						<input class='form-control' style="background-color: #aaabe7" type="search" placeholder="Digite um Pokémon" aria-label="Search"
-							id='input-search-one-pokemon'>
+						<input class='form-control' style="background-color: #aaabe7" type="search"
+							placeholder="Digite um Pokémon" aria-label="Search" id='input-search-one-pokemon'>
 						<button class="btn" id='btn-search-one-pokemon'>Buscar</button>
 					</div>
 				</div>
@@ -29,7 +29,8 @@
 					<div id="By-Name-selected">
 						<ul class="navbar-nav">
 							<li id='search-By-Name-selected'>
-								<select style="background-color: #aaabe7" class='form-control' aria-label="Default select example" id='name-selected'>
+								<select style="background-color: #aaabe7" class='form-control'
+									aria-label="Default select example" id='name-selected'>
 									<option value='0' selected>Escolha um Pokémon</option>
 								</select>
 								<button class="btn" id='btn-search-by-name'>Buscar</button>
@@ -62,7 +63,7 @@
 					</ul>
 				</article>
 			</nav>
-			<h2 id='title-section' > Todos os Pokémon</h2>
+			<h2 id='title-section'> Todos os Pokémon</h2>
 			<section>
 				<article id='info'>
 					<ul id='info-Pokemon'>
@@ -90,24 +91,24 @@
 							</a></h2>
 					</div>
 					<div class="col-sm-2">
-						<h5 class = 'h5-footer'>Inicio</h5>
-						<ul class = 'ul-footer'>
+						<h5 class='h5-footer'>Inicio</h5>
+						<ul class='ul-footer'>
 							<li><a href=''>Home</a></li>
 							<li><a href=''>Cursos</a></li>
 							<li><a href=''>Downloads</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-2">
-						<h5 class = 'h5-footer'>Sobre nós</h5>
-						<ul class = 'ul-footer'>
+						<h5 class='h5-footer'>Sobre nós</h5>
+						<ul class='ul-footer'>
 							<li><a href=''>Informações da Empresa</a></li>
 							<li><a href=''>Contato</a></li>
 							<li><a href=''>Blog</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-2">
-						<h5 class = 'h5-footer'>Suporte</h5>
-						<ul class = 'ul-footer'>
+						<h5 class='h5-footer'>Suporte</h5>
+						<ul class='ul-footer'>
 							<li><a href=''>FAQ</a></li>
 							<li><a href=''>Telefones</a></li>
 							<li><a href=''>Chat</a></li>
@@ -120,8 +121,8 @@
 							<a href='' class="instagram"><i class="fa fa-instagram"></i></a>
 						</div>
 						<div class="col-sm-2">
-							<h5 class = 'h5-footer'>Contato</h5>
-							<ul class = 'ul-footer'>
+							<h5 class='h5-footer'>Contato</h5>
+							<ul class='ul-footer'>
 								<li>(83)998364408</li>
 								<li>bruno.cabral.silva2018@gmail.com</a></li>
 							</ul>
@@ -132,7 +133,7 @@
 			</div>
 			<hr>
 			<div class="footer-copyright">
-				<p id = 'copyright'>© 2022 Copyright - Bruno Gabryell Cabral da Silva</p>
+				<p id='copyright'>© 2022 Copyright - Bruno Gabryell Cabral da Silva</p>
 			</div>
 		</footer>
 	</footer>
