Qualidade de vida: nomes com primeira letra no UpperCase

--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -58,7 +58,7 @@
 					</div>
 				</div>
 			</nav>
-			<h2 id='title-section'> Todos os Pokémon</h2>
+			<h2 id='title-section'></h2>
 			<section>
 				<article id='info'>
 					<ul id='info-Pokemon'>
