--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -58,22 +58,20 @@
 					</div>
 				</div>
 			</nav>
-			<h2 id='title-section'></h2>
-			<section>
+			<div id='teste'>
+				<aside id='search-By-Type'>
+					<p id='titulo-rolagem'>Pesquise por tipo de Pokémon</p>
+					<scroll-container id='barra-de-rolagem'>
+					</scroll-container>
+					<button class="btn" id='btn-search-by-Type'>Buscar</button>
+				</aside>
 				<article id='info'>
+					<h2 id='title-section'></h2>
 					<ul id='info-Pokemon'>
 					</ul>
 				</article>
-			</section>
-		</section>
-		<aside id='search-By-Type'>
-			<div id='div-lateral'>
-				<p id='titulo-rolagem'>Pesquise por tipo de Pokémon</p>
-				<scroll-container id='barra-de-rolagem'>
-				</scroll-container>
-				<button class="btn" id='btn-search-by-Type'>Buscar</button>
 			</div>
-		</aside>
+		</section>
 	</main>
 
 	<footer>
