Dados específicos de cada POkémon

--- a/src/pokedex.html
+++ b/src/pokedex.html
@@ -61,15 +61,29 @@
 			<div id='teste'>
 				<aside id='search-By-Type'>
 					<p id='titulo-rolagem'>Pesquise por tipo de Pokémon</p>
+					<scroll-page class='form-check mb-3' id='btn-todos-pokemon'>
+						<img src='../imagens/type-logo/pokeball.png' class='type-pokemon-image py-1' width='40px'>
+						<label class='form-check-label' mx-3 id='label-todos-pokemon'>Todos os Pokémon</label>
+					</scroll-page>
 					<scroll-container id='barra-de-rolagem'>
 					</scroll-container>
 					<button class="btn" id='btn-search-by-Type'>Buscar</button>
 				</aside>
-				<article id='info'>
-					<h2 id='title-section'></h2>
-					<ul id='info-Pokemon'>
-					</ul>
-				</article>
+				<div id = 'teste2'>
+					<article id='info'>
+						<div id='menu'>
+							<div id='carregando'>
+								<div class='loading'></div>
+								<div class='loading'></div>
+								<div class='loading'></div>
+							</div>
+							<h2 id='title-section'></h2>
+						</div>
+						<ul id='info-Pokemon'>
+						</ul>
+					</article>
+					<button class='btn' id='btn-more-20-Pokemon'>Mais Pokémon</button>
+				</div>
 			</div>
 		</section>
 	</main>
