Corrigindo projeto para executar no gh-pages

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 	<title>Pokedex</title>
-	<link rel="stylesheet" href='../bootstrap-5.1.3-dist/css/bootstrap.min.css'>
-	<link rel='stylesheet' type='text/css' href="pokedex.css">
+	<link rel="stylesheet" href='./bootstrap-5.1.3-dist/css/bootstrap.min.css'>
+	<link rel='stylesheet' type='text/css' href="./src/pokedex.css">
 </head>
 
 <body>
 	<header>
-		<img src='../imagens/poke-logo.png' id='img-title'>
+		<img src='./imagens/poke-logo.png' id='img-title'>
 	</header>
 	<main>
 		<section id='container'>
@@ -62,7 +62,7 @@
 				<aside id='search-By-Type'>
 					<p id='titulo-rolagem'>Pesquise por tipo de Pokémon</p>
 					<scroll-page class='form-check mb-3' id='btn-todos-pokemon'>
-						<img src='../imagens/type-logo/pokeball.png' class='type-pokemon-image py-1' width='40px'>
+						<img src='./imagens/type-logo/pokeball.png' class='type-pokemon-image py-1' width='40px'>
 						<label class='form-check-label' mx-3 id='label-todos-pokemon'>Todos os Pokémon</label>
 					</scroll-page>
 					<scroll-container id='barra-de-rolagem'>
@@ -93,7 +93,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-3">
-						<h2 class="logo"><a href=''> <img src='../imagens/poke-logo.png' class="img-fluid"
+						<h2 class="logo"><a href=''> <img src='./imagens/poke-logo.png' class="img-fluid"
 									id='img-footer'>
 							</a></h2>
 					</div>
@@ -144,7 +144,7 @@
 			</div>
 		</footer>
 	</footer>
-	<script type='module' src='pokedex.js'></script>
+	<script type='module' src='./src/pokedex.js'></script>
 </body>
 
 </html>
